petites modif css

--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -106,6 +106,19 @@ textarea{
     resize:none;
 }
 /*End of forms*/
+
+/*Diverses*/
+#errormessage{
+       color:#ffffff;
+       font-size:3em;
+       position:fixed;
+       bottom:30px;
+       right:-10px;
+       background-color: rgb(255,0,0);
+       padding:20px; 
+       line-height:40px; 
+}
+/*End of diverses*/
 /*End of Typography and CSS Base*/
 
 
@@ -1146,22 +1159,4 @@ only screen and (min-device-pixel-ratio : 1.5) {
     box-shadow: none !important;
   }
 }
-/*End of Printer layout		*/
-
-
-/****************************************/
-/*Diverses*/
-/****************************************/
-
-#errormessage{
-       color:#ffffff;
-       font-size:3em;
-       position:fixed;
-       bottom:30px;
-       right:-10px;
-       max-width:inherit;
-       background-color: rgb(255,0,0);
-       padding:20px; 
-       line-height:40px; 
-}
-/*End of diverse*/
+/*End of Printer layout*/
