--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -783,208 +783,24 @@ and (min-width : 1224px) {
 /*main*/
 /****************************************/
 /*Status = to fill*/
+#container{}
 
-#globalheader {
-    position: fixed;
-    top:0;
-    background-color: #ffffff;
-    width: 100%;
-    height: 90px;
-    padding-bottom:12px;
-    z-index:9999;
-}
-
-#topheader{
-    background-color: #222;
-    width: 100%;
-    height: 30px;
-}
-
-#topheader ul{}
-#topheader ul li{}
-#topheader ul li a{}
+#globalheader{}
+#topheader{}
+#globalnav{}
+#globalnav li{}
+#globalnav li a{}
 
 #logout{}
+#userinfo{}
+#login{}
 
-#globalnav,
-#login,
-#logout,
-#userinfo{
-    display: inline-block;
-}
+#bottomheader{}
 
-#logout,
-#userinfo{
-    float: right;
-    margin: 5px;
-}
+#content{}
 
-#globalnav li{
-    display: inline-block;
-    margin-right: 5px;     
-}
-
-
-#globalnav {
-    margin: 5px 0 5px 5px;    
-}
-
-#globalnav a{
-    color:#c0c0c0;
-}
-
-#globalnav a:hover{
-    color:#fff;
-    text-decoration:none; 
-}
-
-#globalnav .selected{
-    color:#fff;
-    text-decoration:none; 
-}
-
-#userinfo a{    
-    color:#c0c0c0;
-}
-
-#userinfo a:hover{
-    color:#fff;
-    text-decoration:none; 
-}
-
-#login{    
-    position: absolute;
-    right: 15px;
-    top: 5px;
-}
-
-#login a{   
-    color:#c0c0c0;
-}
-
-#login a:hover{
-    color:#ffffff;
-    text-decoration:none;
-}
-
-#logout {
-    margin-right: 15px;
-}
-
-#logout a{
-    color:#c0c0c0;
-}
-
-#logout a:hover{
-    color:#fff;
-    text-decoration:none; 
-
-}
-
-#bottomheader{
-    position:absolute;
-    display:inline-block;    
-    left:50%;
-    top:50px;
-}
-
-#logo {
-    position:fixed;
-    top:30px;
-    left:0px;
-    display:block;
-    width:305px;
-    height:55px;
-    background-image: url("../img/layout/logo.svg");
-    margin-left: 5px;
-    margin-top: 10px;
-    
-}
-
-#subnav{
-    position:relative;
-    display:inline-block;    
-    left:-50%;
-}
-
-#subnav li{
-     display:block;
-     float:left;
-     border-bottom:3px solid #E2E2E2;
-}
-
-#subnav a{
-    display:block;   
-    color:#222222;
-    text-decoration:none;
-    text-align:center;
-    padding:5px;
-    padding-bottom:0;
-}
-
-#subnav li:hover{
-    border-bottom:3px solid red;  
-      
-}
-
-#subnav a:hover{
-}
-
-/*End of globalheader*/
-
-
-/*Content*/
-
-#content{
-    margin-top:100px;
-}
-
-#content article{
-    margin:0 auto;
-}    
-
-#content nav{
-    display:block;
-    float:left;   
-    width: 100%;
-    color:#fff;
-    background-color:#222;
-    text-decoration:none;
-    text-align:center;
-    padding:5px; 
-}
-#content nav li{
-    display:inline-block;
-}
-#content li a {
-    color: #c0c0c0;
-}
-#content li a:hover{
-    color:#fff;
-    text-decoration:none;   
-}
-
-/*End of content*/
-
-
-/*globalfooter*/
-
-#globalfooter{
-    bottom:0;
-    position:fixed;
-    background-color: #222;
-    width: 100%;
-    height: 30px;
-}
-
-#globalfooter p {
-    margin-top:5px;
-    font-style:italic;
-    text-align: center;
-    color:#c0c0c0;    
-}
-
-/*end of globalfooter*/
+#globalfooter{}
+#globalfooter p{}
 
 /*end of main*/
 
