--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -785,11 +785,45 @@ and (min-width : 1224px) {
 /*Status = to fill*/
 #container{}
 
-#globalheader{}
-#topheader{}
+#globalheader{
+    padding:0;
+    position: fixed;
+    top:0;
+    left:0;
+    background-color: #ffffff;
+    width: 100%;
+    height: 90px;
+    padding-bottom:12px;
+    z-index:9999;   
+}
+
+#topheader{
+    background-color: #222;
+    width: 100%;
+    height: 30px;
+}
+
 #globalnav{}
-#globalnav li{}
-#globalnav li a{}
+
+#globalnav li{
+    height:30px;
+    display: block;
+    float:left;
+}
+
+#globalnav li a{
+        font-size:1.2em;
+        display:block;
+        height:inherit;
+        padding:0 10px;
+        padding-top:5px;
+        color:#c0c0c0;
+}
+
+#globalnav li a:hover{
+    color:#fff;
+    text-decoration:none; 
+}
 
 #logout{}
 #userinfo{}
