--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -213,7 +213,7 @@ and (min-width : 1224px) {
 /*about_nav*/
 /****************************************/
 /*Status = done*/
-/*Info: this template is styled by id="subnav"
+/*Info: this template is styled by id="subnav"*/
 /*end of about_nav*/
 
 /****************************************/
@@ -338,9 +338,42 @@ and (min-width : 1224px) {
 .events_single header{}
 .events_single header h1{}
 .events_single header nav{}
+.events_single header nav ul{}
+
+#subnav{
+    position:relative;
+    display:inline-block;    
+    left:-50%;
+}
+
+#subnav li{
+     display:block;
+     float:left;
+     border-bottom:3px solid #E2E2E2;
+}
+
+#subnav a{
+    display:block;   
+    color:#222222;
+    text-decoration:none;
+    text-align:center;
+    padding:5px;
+    padding-bottom:0;
+}
+
+#subnav li:hover{
+    border-bottom:3px solid red;  
+      
+}
+
+
 .events_single header nav a{}
 
-.events_single section{}
+.events_single section{
+    background-color: #eeeeee;
+    margin: 20px;
+    padding: 5px;
+}
 .events_single section h2{}
 .events_single section p{}
 .events_single section dl{}
@@ -786,7 +819,6 @@ and (min-width : 1224px) {
 #container{}
 
 #globalheader{
-    padding:0;
     position: fixed;
     top:0;
     left:0;
@@ -798,20 +830,41 @@ and (min-width : 1224px) {
 }
 
 #topheader{
-    background-color: #222;
-    width: 100%;
-    height: 30px;
+   background-color:#222222;
+   height: 30px;
+   width:100%;
+   position: fixed;
+   margin:0 auto;
 }
 
-#globalnav{}
+#globalnav, lognav{
+    margin:0;
+    padding:0;
+}
 
-#globalnav li{
-    height:30px;
-    display: block;
+#globalnav{
+    padding-left:400px;
+    position:relative;
+    display:block;
+    width:auto;
     float:left;
 }
 
-#globalnav li a{
+#lognav{
+    padding-right:400px;
+    position:relative;
+    display:block;
+    width:auto;
+    float:right;
+}
+
+#globalnav li, #lognav li{
+    display:block;    
+    float: left;
+    height:30px;
+}
+
+#globalnav li a, #lognav li a{
         font-size:1.2em;
         display:block;
         height:inherit;
@@ -820,7 +873,7 @@ and (min-width : 1224px) {
         color:#c0c0c0;
 }
 
-#globalnav li a:hover{
+#globalnav li a:hover, #lognav li a:hover{
     color:#fff;
     text-decoration:none; 
 }
@@ -829,7 +882,53 @@ and (min-width : 1224px) {
 #userinfo{}
 #login{}
 
-#bottomheader{}
+#bottomheader{
+        position:absolute;
+    display:inline-block;    
+    left:50%;
+    top:50px;
+}
+
+#logo {
+    position:fixed;
+    top:30px;
+    left:0px;
+    display:block;
+    width:305px;
+    height:55px;
+    background-image: url("../img/layout/logo.svg");
+    margin-left: 5px;
+    margin-top: 10px;
+}
+
+#subnav{
+    position:relative;
+    display:inline-block;    
+    left:-50%;
+}
+
+#subnav li{
+     display:block;
+     float:left;
+     border-bottom:3px solid #E2E2E2;
+}
+
+#subnav a{
+    display:block;   
+    color:#222222;
+    text-decoration:none;
+    text-align:center;
+    padding:5px;
+    padding-bottom:0;
+}
+
+#subnav li:hover{
+    border-bottom:3px solid red;  
+      
+}
+
+#subnav a:hover{
+}
 
 #content{}
 
