--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -333,11 +333,29 @@ and (min-width : 1224px) {
 /*Status = to fill*/
 
 .events_single{
+    margin-bottom:50px;
+    
 }
 
 .events_single header{
     display: block;
+
+    padding:20px;
 }
+
+.grey_bar{
+        background-color:#eeeeee;
+        height:100px;
+        margin-top:-10px;
+        width:100%;
+        left:0;
+        position:absolute;
+        z-index:-100;
+        transform:rotate(-3deg);
+        -ms-transform:rotate(-3deg); /* IE 9 */
+        -webkit-transform:rotate(-1.3deg); /* Safari and Chrome */           
+}
+
 .events_single header h1{
     display: block;
     font-size: 2.5em;
@@ -350,9 +368,10 @@ and (min-width : 1224px) {
 }
 
 .events_single header nav{
+    
     display: block;
-    margin: 10px auto;
-width:181px;
+    margin: 80px auto;
+    width:181px;
 }
 
 .events_single header nav ul{
@@ -866,11 +885,11 @@ width:181px;
     position: fixed;
     top:0;
     left:0;
-    background-color: #ffffff;
+    background-color: transparent;
     width: 100%;
     height: 90px;
     padding-bottom:12px;
-    z-index:9999;   
+    z-index:100;   
 }
 
 #topheader{
@@ -887,7 +906,7 @@ width:181px;
 }
 
 #globalnav{
-    padding-left:400px;
+    padding-left:17%;
     position:relative;
     display:block;
     width:auto;
@@ -895,7 +914,7 @@ width:181px;
 }
 
 #lognav{
-    padding-right:400px;
+    padding-right:17%;
     position:relative;
     display:block;
     width:auto;
@@ -936,13 +955,75 @@ width:181px;
 #logo {
     position:fixed;
     top:30px;
-    left:0px;
+    left:17%;
     display:block;
     width:305px;
     height:55px;
-    background-image: url("../img/layout/logo.svg");
+    background-image: url(../img/layout/logo.svg);
     margin-left: 5px;
     margin-top: 10px;
+}
+
+.social{
+    right:17%;
+    position:fixed;
+    display:block;
+    float:right;
+}
+.social li{
+    display:block;
+    float:left;
+
+}
+
+.social li a{
+    display:block;
+    background-repeat: no-repeat;
+    background-size:26px 26px;
+    width:30px;
+    height:30px;
+    
+}
+
+.social li a span{
+    display:none;
+    
+}
+
+
+
+.twitter{
+    background-image: url("../img/layout/social/normal/twitter.png");
+
+
+}
+.facebook{
+    background-image: url("../img/layout/social/normal/facebook.png");
+}
+.linkedin{
+    background-image: url("../img/layout/social/normal/linkedin.png");
+}
+.flickr{
+    background-image: url("../img/layout/social/normal/flickr.png");
+}
+.youtube{
+    background-image: url("../img/layout/social/normal/youtube.png");
+}
+
+.twitter:hover{
+    background-image: url("../img/layout/social/hover/twitterHover.png");
+}
+.facebook:hover{
+    background-image: url("../img/layout/social/hover/facebookHover.png");
+}
+.linkedin:hover{
+    background-image: url("../img/layout/social/hover/linkedinHover.png");
+}
+.flickr:hover{
+    background-image: url("../img/layout/social/hover/flickrHover.png");
+}
+.youtube:hover{
+    background-image: url("../img/layout/social/hover/youtubeHover.png");
 }
 
 #subnav{
@@ -1107,20 +1188,68 @@ de ce player video ma parole
 /****************************************/
 /*Status = to fill*/
 
-.videos_list{
-    width: 100%;
+.videos_list{  
+position:relative;
+left:50%;
+width:auto;
+        transform:rotate(-3deg);
+        -ms-transform:rotate(-3deg); /* IE 9 */
+        -webkit-transform:rotate(-1.3deg); /* Safari and Chrome */  
 }
-.videos_list nav{}
-.videos_list nav button{}
-.videos_list nav .previous{}
-.videos_list nav .next{}
+    
+.videos_list .grey_bar_video{
+        background-color:#eeeeee;
+        position:absolute;
+        display:inline-block;
+        height:230px;
+        width:1000%;
+        left:-500%;
+        z-index:-100;   
+}
 
-.videos_list ul{}
-.videos_list ul li{
-    display: block;
-    float: left;
+.videos_list h1{
+     position:relative;
+     left:-50%;
+     display:block;
+     font-size:2em;
+     margin:5px;
+     padding:0;
+     margin-bottom:0;
 }
-.videos_list ul li iframe{}
+
+.videos_list nav{
+    display:block;
+    position:relative;
+}
+
+.videos_list nav .previous{
+    background-image: url("../img/layout/arrows/arrowLeft.svg");
+    float:left;
+}
+.videos_list nav .next{
+    background-image: url("../img/layout/arrows/arrowRight.svg");
+    float:right;
+}
+
+.videos_list ul{
+    display:block;
+
+    width:auto; 
+    position:relative;
+    left:-50%;
+}
+
+.videos_list ul li{
+    display:block;
+    float:left;
+    margin:5px;
+    margin-top:10px;
+    margin-bottom:10px;
+}
+
+.videos_list ul li iframe{
+width:250px;
+}
 
 /*end of videos_list*/
 
