--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -150,6 +150,8 @@ input[type="submit"]{
     font-size:1.3em; 
     border:2px solid #ff0000;
     float:right;
+    padding-top:5px;
+    padding-bottom:5px;
 }
    
 input[type="submit"]:hover{
@@ -180,6 +182,30 @@ input[type="submit"]:hover{
 .selected li{
     color:red;
 }
+
+.theButton{
+    display:block;
+    background-color:rgba(255,0,0,1);
+    width:160px;
+    text-align:center;
+    vertical-align:middle;
+    line-height:30px;
+    color:#ffffff;
+    font-weight:bold;
+    font-size:1.3em; 
+    border:2px solid #ff0000;
+    float:right;
+    padding-top:5px;
+    padding-bottom:5px;
+}
+
+.theButton:hover{
+    color:#ff0000;
+    border:2px solid #ff0000;
+    background-color:white;
+   }
+
+   
 /*End of diverses*/
 /*End of Typography and CSS Base*/
 
