--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -169,18 +169,21 @@ input[type="submit"]:hover{
     position:relative;
     margin-top:70px;
     background-color:#bbbbbb;
+    height:50px;
 }
 
 .gestion_subnav h1{
     display:block;
     float:left;
+    font-size:1.5em;
     margin-left:18px;
+    margin-bottom:5px;
+    margin-top:5px;
 }
 
 .gestion_subnav ul{
-    padding-top:10px;
-    padding-bottom:10px;
-    padding-right:10px;
+    margin-bottom:5px;
+    margin-top:8px;
     display:block;
     float:right;
 }
@@ -190,7 +193,6 @@ input[type="submit"]:hover{
     float:left;
     padding:4px;
     width:100px;
-
     text-align:center;
 }
 
@@ -199,21 +201,22 @@ input[type="submit"]:hover{
     width:100px;
     text-align:center;
     vertical-align:middle;
-    line-height:30px;
-    color:#ffffff;
-    font-weight:bold;
-    font-size:1em; 
-    border:2px solid #ffffff;
+    line-height:15px;
+    color:#eeeeee;
+    font-size:1em;
+    background-color:#999999;
     float:right;
+    margin-right:5px;
+    margin-left:5px;
     padding-top:5px;
-    padding-bottom:5px; 
+    padding-bottom:5px;
+    border:1px solid; 
 }
 
 
 .gestion_subnav ul li a:hover{
     color:#222222;
-    border-color:#222222;
-    background-color:#999999;
+    background-color:#ffffff;
 }
 
 
