--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -115,6 +115,7 @@ legend{
     margin-bottom:20px;
     font-size:2em;
     
+    float: left;
 }
 
 input, textarea{
@@ -975,14 +976,25 @@ and (min-width : 1224px) {
 /*Status = to fill*/
 
 .gestion_events_mail_edit{}
+.gestion_events_mail_edit input{
+    display:inline-block;
+    width:160px;
+    float:right;
+}
 
 .gestion_events_mail_edit fieldset{}
-.gestion_events_mail_edit .to legend{}
-.gestion_events_mail_edit .to select{}
-.gestion_events_mail_edit .to select option{}
-.gestion_events_mail_edit input{}
-.gestion_events_mail_edit .subject legend{}
-.gestion_events_mail_edit .subject textarea{}
+.gestion_events_mail_edit fieldset p{}
+}
+.gestion_events_mail_edit fieldset p legend{
+    float:left;
+}
+.gestion_events_mail_edit fieldset select{
+    flaot:right;
+    width:50%;
+}
+.gestion_events_mail_edit fieldset select option{
+}
+.gestion_events_mail_edit fieldset textarea{}
 /*end of gestion_events_mail_edit*/
 
 
