--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -100,6 +100,7 @@ legend, label{
     width:35%;
     border: none;
     display: block;
+    display: inline-block;
     float: left;
     margin:0;
     margin-bottom: 10px;
@@ -1168,8 +1169,8 @@ and (min-width : 1224px) {
         gestion_locations_infos.tpl
         gestion_locations_nav.tpl
         gestion_locations_list.tpl
-/*end of gestion_locations
-
+        
+/*end of gestion_locations*/
 
 /****************************************/
 /*gestion_locations_infos*/
@@ -1179,11 +1180,15 @@ and (min-width : 1224px) {
 .gestion_locations_infos {
     float:right;
 }
-.gestion_locations_infos p {}
-.gestion_locations_infos p input [type="submit]{}
-.gestion_locations_infos fieldset p label{}
-.gestion_locations_infos fieldset p input{}
-
+.gestion_locations_infos form {
+}
+.gestion_locations_infos form p{
+    width:100%;
+    float:right;
+}
+.gestion_locations_infos form p label{
+    line-height:30px;
+}
 
 /*end of gestion_locations_infos*/
 
@@ -1191,7 +1196,7 @@ and (min-width : 1224px) {
 /****************************************/
 /*gestion_locations_list*/
 /****************************************/
-/*Status = done*/
+/*Status = to fill*/
 
 .gestion_locations_list .theButton {
     display:inline-block;
@@ -1210,12 +1215,11 @@ and (min-width : 1224px) {
     display:block;
     background-color:#eeeeee;
     margin:10px 0;
-    padding:5px;    
+    padding:5px;
 }
 .gestion_locations_list ul li a{}
 
-/*end of gestion_locations_list*/
-
+/*end of gestion_lcoations_list*/
 
 /****************************************/
 /*gestion_locations_nav*/
