css done ->gestion_locations_infos

--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1196,7 +1196,7 @@ and (min-width : 1224px) {
 /****************************************/
 /*gestion_locations_list*/
 /****************************************/
-/*Status = to fill*/
+/*Status = done*/
 
 .gestion_locations_list .theButton {
     display:inline-block;
