--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -978,24 +978,31 @@ and (min-width : 1224px) {
 
 .gestion_events_mail_edit{}
 .gestion_events_mail_edit input{
-    display:inline-block;
-    width:160px;
-    float:right;
+    display:block;
+    float: right;
+    margin-bottom:50px;   
 }
 
-.gestion_events_mail_edit fieldset{}
-.gestion_events_mail_edit fieldset p{}
+.gestion_events_mail_edit fieldset{
+    margin-top:10px;
+    disply:inline-block;
 }
-.gestion_events_mail_edit fieldset p legend{
+.gestion_events_mail_edit fieldset label{
     float:left;
+    width:30%;
 }
 .gestion_events_mail_edit fieldset select{
-    flaot:right;
-    width:50%;
+    float:right;
+    width:65%;
 }
 .gestion_events_mail_edit fieldset select option{
+    line-height:30px;
+    width:65%;
 }
-.gestion_events_mail_edit fieldset textarea{}
+.gestion_events_mail_edit fieldset textarea{
+    width:100%;
+}
+
 /*end of gestion_events_mail_edit*/
 
 
